--- a/W02/task3.html
+++ b/W02/task3.html
@@ -3,29 +3,34 @@
         <title> task3 </title>
     </head>
     <body>
+
+        <form action="#" method="post">
+            <p>テキストボックスにx,y,zの順に数値を入れて「変更」を押すと面積が出る</p><br>
+            <p>頂点その１：<br>
+            <input type="text" value="0,0,0" id="box0">
+            <input type="button" value="変更" id="button0" onclick="ChangeVector(0)"></p>
+            <p>頂点その２：<br>
+            <input type="text" value="1,1,1" id="box1">
+            <input type="button" value="変更" id="button1" onclick="ChangeVector(1)"></p>
+            <p>頂点その３：<br>
+            <input type="text" value="5,2,2" id="box2">
+            <input type="button" value="変更" id="button2" onclick="ChangeVector(2)"></p>
+        </form>
+
         <script src="vec3.js"></script>
         <script>
-        //   var x =5, y = 4, z = 8;
-        //   var v = new Vec3(x,y,z);
-        //   var min = v.min();
-        //   var mid = v.mid();
-        //   var max = v.max();
-          
-        //   document.write("min = " + min);
-        //   document.write(" ,mid = " + mid);
-        //   document.write(" ,max = " + max);
 
         var x0,x1,x2,y0,y1,y2,z0,z1,z2;
         x0=0;y0=0;z0=0;
         x1=1;y1=1;z1=1;
         x2=5;y2=2;z2=2;
 
-        vector1 = new Vec3(x0,y0,z0);
-        vector2 = new Vec3(x1,y1,z1);
-        vector3 = new Vec3(x2,y2,z2);
+        vector0 = new Vec3(x0,y0,z0);
+        vector1 = new Vec3(x1,y1,z1);
+        vector2 = new Vec3(x2,y2,z2);
         //document.write("area = ");
-        var area = AreaOfTriangle(vector1,vector2,vector3);
-        document.write("area = " + area);
+        var area = AreaOfTriangle(vector0,vector1,vector2);
+        alert("面積： " + area);
 
           function AreaOfTriangle(v0,v1,v2)
           {
@@ -37,6 +42,27 @@
             (semiperimeter - length2 )*(semiperimeter - length3));
           }
 
+          function ChangeVector(idx)
+          {
+            var vector_idx = "box"+idx;
+            var value = document.getElementById(vector_idx).value;
+            value = value.split(',');
+            value.map(Number);
+            switch(idx)
+            {
+                case 0:
+                    vector0.set(value[0],value[1],value[2]);
+                    break;
+                case 1:
+                    vector1.set(value[0],value[1],value[2]);
+                    break;
+                case 2:
+                    vector2.set(value[0],value[1],value[2]);
+                    break;
+            }
+            area = AreaOfTriangle(vector0,vector1,vector2);
+            alert("面積： " + area);
+          }
         </script>
     </body>
 </html>
