--- a/W04/task2.html
+++ b/W04/task2.html
@@ -24,7 +24,7 @@
         .data(data)
             .enter()
             .append("p")
-            .text(function(d){ return d.label;})
+            .text(function(d){ return "aa";})
             .attr("y",function(d,i){ return padding + i * ( height + padding ); });
 	 };
 	</script>
