--- a/W04/task2.html
+++ b/W04/task2.html
@@ -17,15 +17,15 @@
             	.text("a");
             	//.attr("y",function(d,i){ return padding + i * ( height + padding ); });
 		 
-	     svg.selectAll("rect")
-		.data(data)
-	        .enter()
-	        .append("rect")
-	        .attr("x", padding+20)
-	        .attr("y", function(d,i){ return padding + i * ( height + padding ); })
-	        .attr("width", function(d){ return d.length; })
-	        .attr("height", height)
-            .style("fill", function(d){ return d.color; });
+	 //     svg.selectAll("rect")
+		// .data(data)
+	 //        .enter()
+	 //        .append("rect")
+	 //        .attr("x", padding+20)
+	 //        .attr("y", function(d,i){ return padding + i * ( height + padding ); })
+	 //        .attr("width", function(d){ return d.length; })
+	 //        .attr("height", height)
+  //           .style("fill", function(d){ return d.color; });
 
 
 	 };
