--- a/W04/task2.html
+++ b/W04/task2.html
@@ -14,7 +14,7 @@
         	.data(data)
             	.enter()
             	.append("p")
-            	.text("a");
+            	.text("a")
             	.attr("y",function(d,i){ return padding + i * ( height + padding ); })
 		.attr("x",padding);
 		 
