--- a/W04/task2.html
+++ b/W04/task2.html
@@ -15,8 +15,8 @@
             	.enter()
             	.append("p")
             	.text("a")
-            	.attr("y",function(d,i){ return padding + i * ( height + padding ); })
-		.attr("x",padding);
+            	.attr("y",100)
+		.attr("x",100);
 		 
 	     svg.selectAll("rect")
 		.data(data)
