--- a/W04/task2.html
+++ b/W04/task2.html
@@ -16,7 +16,8 @@
             	.append("p")
             	.text("a")
             	.attr("y",100)
-		.attr("x",100);
+		.attr("x",100)
+		.style("font-size","50px");
 		 
 	     svg.selectAll("rect")
 		.data(data)
