--- a/W04/task2.html
+++ b/W04/task2.html
@@ -18,7 +18,8 @@
             	.attr("y",100)
 		.attr("x",100)
 		.style("font-size","50px")
-		.style("font-weight","bold");
+		.style("font-weight","bold")
+		.style("color", "#00aaff");
 		 
 	     svg.selectAll("rect")
 		.data(data)
