--- a/W04/task2.html
+++ b/W04/task2.html
@@ -20,6 +20,12 @@
 		.style("font-size","50px")
 		.style("font-weight","bold")
 		.style("color", "#00aaff");
+		 // d3.select("body")
+	     svg.selectAll("p")
+                .data(data)
+                .enter()
+                .append("p")
+                .text("サンプルテキスト");
 		 
 	     svg.selectAll("rect")
 		.data(data)
