--- a/W04/task2.html
+++ b/W04/task2.html
@@ -10,28 +10,20 @@
 	 var svg = d3.select("body").append("svg");
 	 d3.csv("https://1935067t.github.io/InfoVis2023/W04/w04_task2.csv", draw );
 	 function draw(data){
-	     svg.selectAll("span")
-        	.data(data)
-            	.enter()
-            	.append("span")
-            	.text("a")
-            	.attr("y",100)
-		.attr("x",100)
-		.style("font-size","50px")
-		.style("font-weight","bold")
-		.style("color", "#00aaff");
 		 d3.select("body")
 	        .selectAll("p")
                 .data(data)
                 .enter()
                 .append("p")
-                .text("サンプルテキスト");
+                .text(function(d){ return d.label; })
+		.attr("y", function(d,i){ return padding + i * ( height + padding ); })
+		.attr("x", padding);
 		 
 	     svg.selectAll("rect")
 		.data(data)
 	        .enter()
 	        .append("rect")
-	        .attr("x", padding+20)
+	        .attr("x", padding+200)
 	        .attr("y", function(d,i){ return padding + i * ( height + padding ); })
 	        .attr("width", function(d){ return d.length; })
 	        .attr("height", height)
