--- a/W04/task2.html
+++ b/W04/task2.html
@@ -7,20 +7,20 @@
 	<script>
      var padding = 10;
 	 var height = 20;
-	 var svg = d3.select("body").append("svg");
+	 // var svg = d3.select("body").append("svg");
 	 d3.csv("https://1935067t.github.io/InfoVis2023/W04/w04_task2.csv", draw );
 	 function draw(data){
-		 // d3.select("body")
-	 	
-	        svg.selectAll("p")
+		 d3.select("body")
+	        .selectAll("p")
                 .data(data)
                 .enter()
                 .append("p")
                 .text(function(d){ return d.label; })
 		.attr("y", function(d,i){ return padding + i * ( height + padding ); })
 		.attr("x", padding);
-		 
-	     svg.selectAll("rect")
+
+		 d3.select("body")
+	        .selectAll("rect")
 		.data(data)
 	        .enter()
 	        .append("rect")
