--- a/W10/task1.html
+++ b/W10/task1.html
@@ -3,6 +3,11 @@
         <title>W10: task1</title>
     </head>
     <body>
+        <div>
+            <button type="button" id="reverse">Reverse</button>
+            <button type="button" id="desc">Desc</button>
+            <button type="button" id="asc">Asc</button>
+        </div>
 	<svg id="drawing_region"></svg>
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script src="task1.js"></script>
